@@ -15,14 +15,12 @@
  */
 package com.thoughtworks.go.agent.service;
 
+import com.thoughtworks.go.agent.URLService;
 import com.thoughtworks.go.agent.common.ssl.GoAgentServerHttpClient;
 import com.thoughtworks.go.config.AgentAutoRegistrationProperties;
 import com.thoughtworks.go.config.AgentRegistry;
 import com.thoughtworks.go.server.service.AgentRuntimeInfo;
 import com.thoughtworks.go.util.SystemUtil;
-import com.thoughtworks.go.agent.URLService;
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.io.input.NullInputStream;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpRequestBase;
 import org.apache.http.client.methods.RequestBuilder;
@@ -170,8 +168,11 @@ public class SslInfrastructureService {
         }
 
         private String responseBody(CloseableHttpResponse response) throws IOException {
-            try (InputStream is = response.getEntity() == null ? new NullInputStream(0) : response.getEntity().getContent()) {
-                return IOUtils.toString(is, StandardCharsets.UTF_8);
+            if (response.getEntity() == null) {
+                return "";
+            }
+            try (InputStream is = response.getEntity().getContent()) {
+                return new String(is.readAllBytes(), StandardCharsets.UTF_8);
             }
         }
 
