@@ -21,17 +21,13 @@ import com.thoughtworks.go.config.CruiseConfig;
 import com.thoughtworks.go.config.MagicalGoConfigXmlLoader;
 import com.thoughtworks.go.helper.ConfigFileFixture;
 import com.thoughtworks.go.util.ConfigElementImplementationRegistryMother;
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.hamcrest.Matchers.anyOf;
-import static org.hamcrest.Matchers.not;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.fail;
 
 public class UniqueRunIfStatusValidatorTest {
@@ -40,7 +36,7 @@ public class UniqueRunIfStatusValidatorTest {
     public void shouldThrowExceptionWhenThereIsMoreThanOneOnCancelInEachTask() throws Exception {
         try {
             final ByteArrayInputStream inputStream = new ByteArrayInputStream(ConfigFileFixture.CONTAINS_MULTI_SAME_STATUS_RUN_IF.getBytes());
-            new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(IOUtils.toString(inputStream, UTF_8));
+            new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(new String(inputStream.readAllBytes(), UTF_8));
             fail();
         } catch (Exception e) {
             assertThat(e.getMessage(), anyOf(
@@ -55,7 +51,7 @@ public class UniqueRunIfStatusValidatorTest {
     public void shouldPassWhenEachJobContainsOnCancel() throws Exception {
         final ByteArrayInputStream inputStream = new ByteArrayInputStream(ConfigMigrator.migrate(
                 ConfigFileFixture.CONTAINS_MULTI_DIFFERENT_STATUS_RUN_IF).getBytes());
-        CruiseConfig cruiseConfig = new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(IOUtils.toString(inputStream, UTF_8)).config;
+        CruiseConfig cruiseConfig = new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(new String(inputStream.readAllBytes(), UTF_8)).config;
         assertThat(cruiseConfig, is(not(nullValue())));
     }
 }
